overflow fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -98,6 +98,8 @@ nav i {
     }
     body {
         overflow: hidden;
+        position: relative;
+        height: 100%;
     }
     .menu-list {
         position: absolute;
